fix: bugs on Level_026 are now fixed
All bugs in Level_026 caused by the new naming convention have been properly reviewed and fixed.

Events in EventSheet_016 were moved to EventSheet_015, unifying the system from levels 022, 023, 024, 025 and 026 into a single EventSheet due to their redundancy.

EventSheets 002, 003, 004, 006 and 016 had their names changed to a more literal description of their functions

The Levels are now working as expected.

--- a/Layouts/Level_002.xml
+++ b/Layouts/Level_002.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_002</name>
     <sid>4188365673521918</sid>
-    <event-sheet>EventSheet_002</event-sheet>
+    <event-sheet>EventSheet_MainCharacter_001_System</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
