--- a/Layouts/Level_008.xml
+++ b/Layouts/Level_008.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_008</name>
     <sid>540589694941378</sid>
-    <event-sheet>EventSheet_002</event-sheet>
+    <event-sheet>EventSheet_MainCharacter_001_System</event-sheet>
     <size>
         <width>11770</width>
         <height>720</height>
