--- a/Layouts/Level_001.xml
+++ b/Layouts/Level_001.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_001</name>
     <sid>3575147355232319</sid>
-    <event-sheet>EventSheet_002</event-sheet>
+    <event-sheet>EventSheet_MainCharacter_001_System</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
