--- a/Layouts/Level_003.xml
+++ b/Layouts/Level_003.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_003</name>
     <sid>4772639068143382</sid>
-    <event-sheet>EventSheet_003</event-sheet>
+    <event-sheet>EventSheet_CarSystem</event-sheet>
     <size>
         <width>970</width>
         <height>720</height>
