--- a/Layouts/Level_004.xml
+++ b/Layouts/Level_004.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_004</name>
     <sid>1049216179399367</sid>
-    <event-sheet>EventSheet_004</event-sheet>
+    <event-sheet>EventSheet_CityTrafficSystem</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
