--- a/Layouts/Level_007.xml
+++ b/Layouts/Level_007.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_007</name>
     <sid>8851424156227848</sid>
-    <event-sheet>EventSheet_006</event-sheet>
+    <event-sheet>EventSheet_VideoSystem</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
