--- a/Layouts/Level_016.xml
+++ b/Layouts/Level_016.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_016</name>
     <sid>8812255382085093</sid>
-    <event-sheet>EventSheet_002</event-sheet>
+    <event-sheet>EventSheet_MainCharacter_001_System</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
