--- a/Layouts/Level_020.xml
+++ b/Layouts/Level_020.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_020</name>
     <sid>920888345251238</sid>
-    <event-sheet>EventSheet_002</event-sheet>
+    <event-sheet>EventSheet_MainCharacter_001_System</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
