--- a/Layouts/Level_021.xml
+++ b/Layouts/Level_021.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_021</name>
     <sid>6052534907758985</sid>
-    <event-sheet>EventSheet_014</event-sheet>
+    <event-sheet>EventSheet_Delete8</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
