--- a/Layouts/Level_023.xml
+++ b/Layouts/Level_023.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_023</name>
     <sid>6732546032036629</sid>
-    <event-sheet>EventSheet_015</event-sheet>
+    <event-sheet>EventSheet_MainCharacter_002_System</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
