--- a/Layouts/Level_024.xml
+++ b/Layouts/Level_024.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_024</name>
     <sid>6982574512058221</sid>
-    <event-sheet>EventSheet_015</event-sheet>
+    <event-sheet>EventSheet_MainCharacter_002_System</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
