--- a/Layouts/Level_022.xml
+++ b/Layouts/Level_022.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_022</name>
     <sid>4569177331730925</sid>
-    <event-sheet>EventSheet_015</event-sheet>
+    <event-sheet>EventSheet_MainCharacter_002_System</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
