--- a/Layouts/Level_026.xml
+++ b/Layouts/Level_026.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>Level_026</name>
     <sid>1627556032658689</sid>
-    <event-sheet>EventSheet_015</event-sheet>
+    <event-sheet>EventSheet_MainCharacter_002_System</event-sheet>
     <size>
         <width>31280</width>
         <height>500</height>
