--- a/Layouts/MainMenu.xml
+++ b/Layouts/MainMenu.xml
@@ -2,7 +2,7 @@
 <c2layout>
     <name>MainMenu</name>
     <sid>4180293027692488</sid>
-    <event-sheet>EventSheet_MainMenu</event-sheet>
+    <event-sheet>EventSheet_GameLauncher</event-sheet>
     <size>
         <width>1280</width>
         <height>720</height>
