refactor: all useless event sheets have been deleted
Eight Event Sheets that are not being used in the new version of the project have been deleted from the repository.

Some .uistate.xml files remaining due to the new naming convention were also removed from the "Event sheets" folder.

--- a/Layouts/Level_019.xml
+++ b/Layouts/Level_019.xml
@@ -4067,10 +4067,10 @@
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>423</x>
+                        <x>364.294128418</x>
                         <y>503</y>
                         <z>0</z>
-                        <width>488</width>
+                        <width>370.588256836</width>
                         <height>64</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
